day03/workshop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-ingress
  namespace: codeserver
  labels:
    app: cs
spec:
  ingressClassName: nginx
  rules:
  - host: code-146.190.5.177.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: cs-svc
            port:
              number: 8443
